--- a/GNU_Emacs.mw
+++ b/GNU_Emacs.mw
@@ -1,77 +1,55 @@
-{{InfoBox stack
-|{{InfoBox homepage|https://www.gnu.org/software/emacs/|header=true}}
-|{{InfoBox wikipedia}}
-|{{InfoBox ohloh|emacs}}
-}}
-'''GNU Emacs''' is [[Article description::a powerful, extensible, self-documenting text editor.]] It is released by the Free Software Foundation and has been under development since 1976. In Gentoo, GNU Emacs is maintained by the team of the same name, which can be reached through {{Mail|emacs@gentoo.org}}. Detailed developer information can be found on the [[Project:Emacs|project page]].
+[http://www.gnu.org/s/emacs/ '''GNU Emacs'''] is a powerful, extensible, self-documenting text editor.
 
 == Installation ==
-
-=== USE flags ===
-
-{{USEflag|package=app-editors/emacs-vcs}}
-
-{{Note|USE flags for toolkits <code>gtk</code>, <code>motif</code>, and <code>athena</code> are mutually exclusive. Generally, <code>USE{{=}}"gtk"</code> is a good choice. However, if intending to use Emacs as a daemon, <code>USE{{=}}"motif -athena -gtk -Xaw3d"</code> or <code>USE{{=}}"athena Xaw3d -gtk -motif"</code> is recommended instead because of {{bug|292471}}. <code>USE{{=}}"athena Xaw3d"</code> resembles <code>USE{{=}}"gtk"</code> very well.}}
-
-=== Emerge ===
-
 {{Emerge|app-editors/emacs}}
+<br />
+Explanation of USE Flags:
+{{USEflag
+|package=app-editors/emacs
+|alsa++yes
+|aqua
+|athena
+|dbus++yes
+|gconf
+|gif++yes
+|gpm++yes
+|gtk++yes
+|gzip-el
+|hesiod
+|jpeg++yes
+|kerberos
+<!--|livecd-->
+|m17n-lib
+|motif
+|png++yes
+|sound++yes
+|source
+|svg++yes
+|tiff++yes
+|toolkit-scroll-bars
+|X++yes
+|Xaw3d
+|xft++yes
+|xpm+yes+yes
+}}
+{{Note|1=USE flags for toolkits <code>gtk</code>, <code>Xaw3d</code>, <code>athena</code>, and <code>motif</code> are mutually exclusive. Generally, <code>USE="gtk"</code> is a good choice. However, if you intend to use Emacs as a daemon, <code>USE="Xaw3d -gtk"</code> is recommended instead because of {{bug|292471}}.}}
 
-== Several versions side-by-side ==
-
-In Gentoo, several Emacs versions can be installed on a system simultaneously. The upstream version already installs elisp and data files into versioned subdirectories. To avoid file collisions between slots, in Gentoo binaries and man pages are suffixed with their corresponding version number, too.
-
-The eselect module from {{Package|app-eselect/eselect-emacs}} can be used to link {{Path|/usr/bin/emacs}} and its auxiliary programs to the ones belonging to the desired Emacs version. Consult the [[Project:Eselect/User guide|eselect user guide]] for details on eselect.
+<!--
+*<code>X</code> = enable X windows interface<br />
+*<code>gtk</code> = enable gtk interface<br />
+*<code>jpeg</code> = enables support for displaying jpeg images (will only be useful if <code>X</code> is also enabled)<br />
+*<code>png</code> = support for png images (will probably want if you use DocView mode to read PDFs)<br />
+*<code>gif</code> = support for gif images<br />
+*<code>xft</code> = support for TrueType fonts (such as the Liberation family of fonts)<br />
+-->
 
 == Configuration ==
-
-Emacs can be customized by clicking through the GUI (use {{Key|M-x}} <code>customize-group</code> {{Key|RET}}) or by using the {{Path|~/.emacs}} configuration file which is written in Emacs Lisp, Emacs' own Lisp dialect.
+You can customize Emacs by clicking through the GUI (use <code>M-x customize-group</code>) or with your <code>~/.emacs</code> which's written in emacs-lisp, Emacs' own Lisp-dialect.
 
 == Documentation ==
+For a quick-start documentation, type in Emacs: <code>C-h t(Control-h and t)</code>
+For further help on how to use Emacs, start <code>emacs</code> and type Control-h and then r.
 
-For a quick-start documentation, type in Emacs: {{Key|C-h t}} ({{Key|Ctrl}}+{{Key|h}} followed by {{Key|t}}). For further help on how to use Emacs, start <tt>emacs</tt> and type {{Key|C-h r}} ({{Key|Ctrl}}+{{Key|h}} followed by {{Key|r}}). To exit Emacs, type {{Key|C-x C-c}} ({{Key|Ctrl}}+{{Key|x}} followed by {{Key|Ctrl}}+{{Key|c}}).
-
-* [https://www.gnu.org/software/emacs/tour/ A guided tour of Emacs]
-* [https://www.gnu.org/software/emacs/manual/emacs.html GNU Emacs manual]
-
-== Additional elisp packages ==
-
-Emacs has lots of additional packages written in elisp. There is a number of ways to install them, but the standard one is [https://www.emacswiki.org/emacs/ELPA package.el] nowadays. On Gentoo it can be used both on per-user and system-wide way.
-
-To install elisp packages per-user use [https://www.emacswiki.org/emacs/ELPA package.el] distributed with GNU Emacs.
-
-To install elisp packages system-wide under the Portage control you can use [https://github.com/jauhien/gs-elpa gs-elpa]. Read [[layman]] documentation before using it, as gs-elpa represents ELPA repositories as layman overlays. It currently supports 4 repositories: [https://elpa.gnu.org/ gnu-elpa], [https://marmalade-repo.org/ marmalade],
-[https://melpa.org/ melpa] and [https://stable.melpa.org/ melpa-stable].
-
-When the layman setup works, install gs-elpa:
-
-{{Emerge|app-portage/gs-elpa}}
-
-After it you can start adding elisp repos and emerging packages, e.g.:
-
-{{RootCmd|layman -L}}
-
-{{RootCmd|layman -a gnu-elpa}}
-
-{{RootCmd|layman -a melpa-stable}}
-
-{{Emerge|app-emacs/starter-kit app-emacs/starter-kit-bindings app-emacs/starter-kit-eshell app-emacs/starter-kit-lisp}}
-
-{{Warning|Always add gnu-elpa repository first, as other repos depend on it.}}
-
-Bugs related to gs-elpa should be reported on [https://github.com/jauhien/gs-elpa/issues its issue tracker].
-
-If you ever find bugs like [https://github.com/jauhien/gs-elpa/issues/6 this one], you can exclude packages from dependencies adding their name to the "external" object in the "common-config" section of {{Path|/etc/g-sorcery/gs-elpa.json}} configuration file. For the example issue it would be (together with already added packages):
-
-{{FileBox|filename=/etc/g-sorcery/gs-elpa.json|1=
-    "external": {"emacs": "virtual/emacs", "cl-lib": "virtual/emacs", "eieio": "virtual/emacs"}
-}}
-
-== See also ==
-
-* {{See also|Emacs}}
-* {{See also|Xft support for GNU Emacs}}
-* {{See also|Vim}}
-* {{See also|Nano}}
 
 [[Category:Editor]]
+[[Category:Software]]
