Link to project page

--- a/XEmacs.mw
+++ b/XEmacs.mw
@@ -1,11 +1,1 @@
-{{Stub}}
-{{InfoBox stack
-|{{InfoBox homepage|https://www.xemacs.org/|header=true}}
-|{{InfoBox wikipedia}}
-}}
-
-== See also ==
-
-* [[Project:XEmacs/XEmacs on Gentoo|XEmacs on Gentoo]]
-
-[[Category:Editor]]
+[http://www.gentoo.org/proj/en/lisp/emacs/xemacs.xml User documentation].
